# gdpp

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MINE.md  README.md
.github/actions/setup-godot/: action.yml
.github/actions/setup-msvc/: action.yml  index.js
.github/workflows/: README.md  android.yml  core.yml  godot-compatibility.yml  host-components.yml  ios.yml  native-integration.yml  package-release.yml  quality.yml  release-package-smoke.yml  release.yml  web.yml
cmake/: CleanAddonBuild.cmake  CompilerWarnings.cmake  GodotPlugin.cmake  PatchGodotCppClassDB.cmake
docs/: ARCHITECTURE.md  COMMERCIAL_DELIVERY.md  COMPATIBILITY.md  CONTRIBUTING.md  GDEXTENSION_BRIDGE.md  GODOT_API.md  IOS.md  PERFORMANCE.md  PLATFORM_TEST_REPORT.md  PROJECT_BUILD.md  ROADMAP.md  TYPED_IR.md  WEB.md
example/: abstract_contract.gd  abstract_implementation.gd  annotation_contract_case.gd  autoload_state.gd  autoload_state.gd.uid  await_expression_case.gd  binary_serialization_case.gd  cross_ref_a.gd  cross_ref_a.gd.uid  cross_ref_b.gd  cross_ref_b.gd.uid  default_argument_case.gd  dictionary_lifetime_case.gd  evaluation_order_case.gd  export_presets.cfg  flow_narrowing_case.gd  hello.gd  hello.gd.uid  icon.svg.import  inheritance_base.gd  inheritance_base.gd.uid  inheritance_child.gd  inheritance_child.gd.uid  integer_semantics_case.gd  iteration_case.gd  language_utility_case.gd  long_await_chain.gd  long_await_chain.gd.uid  main.tscn  matrix_workload.gd  matrix_workload.gd.uid  optimization_case.gd  player.gd  player.gd.uid  project.godot  reference_semantics_case.gd  required_initializer.gd  required_initializer.gd.uid  rpc_case.gd  runtime_mode_case.gd  (+5 more)
example/addons/gdpp/: LICENSE  THIRD_PARTY_NOTICES.md  build_progress.gd  export_plugin.gd  gdpp.gdextension  native_build_job.gd  plugin.cfg  plugin.gd
include/gdpp/: ast.hpp  code_generator.hpp  compiler.hpp  constant_evaluator.hpp  diagnostic.hpp  extension_bridge.hpp  godot_api.hpp  ir.hpp  ir_lowerer.hpp  ir_optimizer.hpp  language_features.hpp  lexer.hpp  mir.hpp  native_builder.hpp  parser.hpp  path_utf8.hpp  project_compiler.hpp  script_symbols.hpp  semantic.hpp  source.hpp  token.hpp  version.hpp.in
include/gdpp/codegen/: cpp_generator.hpp
include/gdpp/compiler/: compiler.hpp
include/gdpp/core/: diagnostic.hpp  godot_version.hpp
include/gdpp/frontend/: ast.hpp  constant_evaluator.hpp  language_features.hpp  lexer.hpp  limits.hpp  literal.hpp  parser.hpp  token.hpp  unicode.hpp
include/gdpp/ir/: hir.hpp  lowering.hpp  mir.hpp  mir_optimizer.hpp  optimizer.hpp
include/gdpp/numeric/: integer_semantics.hpp
include/gdpp/project/: extension_bridge.hpp  native_builder.hpp  project_compiler.hpp
src/cli/: main.cpp
src/codegen/: code_generator.cpp  cpp_generator.cpp
src/compiler/: compiler.cpp  diagnostic.cpp
src/core/: diagnostic.cpp  godot_version.cpp  source.cpp
src/frontend/: constant_evaluator.cpp  language_features.cpp  lexer.cpp  literal.cpp  parser.cpp  token.cpp  unicode.cpp  unicode_identifier_ranges.inc
src/godot/: compiler_service.cpp  register_types.cpp
src/ir/: ir_lowerer.cpp  ir_optimizer.cpp  lowering.cpp  mir.cpp  mir_optimizer.cpp  optimizer.cpp
src/project/: extension_bridge.cpp  native_builder.cpp  project_compiler.cpp  project_file_selector.cpp  project_file_selector.hpp  sha256.cpp
src/runtime/: attached_script_instance.cpp  attached_script_language.cpp  attached_script_registry.cpp  variant_ops.cpp
src/semantic/: analyzer.cpp  conversion.cpp  flow.cpp  godot_api.cpp  godot_version.cpp  intrinsic.cpp  intrinsics.cpp  iteration.cpp  script_symbols.cpp  semantic.cpp  type.cpp
src/support/: sha256.cpp
test/: CMakeLists.txt  addon_descriptor_test.cmake  assert_release_preprocess_test.py  clean_addon_build_test.cmake  compiler_test.cpp  complete_release_packaging_test.py  constant_evaluator_test.cpp  download_with_retry_test.py  export_immutability_test.py  flow_test.cpp  frontend_limits_test.cpp  godot_api_test.cpp  integer_semantics_test.cpp  ir_test.cpp  iteration_test.cpp  lexer_test.cpp  main.cpp  mir_test.cpp  native_builder_test.cpp  parser_test.cpp  project_compiler_test.cpp  release_packaging_test.py  script_symbols_test.cpp  sdk_profile_contract_test.cmake  setup_msvc_action_test.js  target_sdk_registration_test.cmake  type_test.cpp  web_browser_smoke_test.py
test/attached_extension/: register_types.cpp  vendor_base.cpp  vendor_base.hpp
test/attached_extension/project/: a_container_owner.gd  attached_scene.tscn  deferred_shape.tscn  export_main.gd  export_main.tscn  export_presets.cfg  extension_list.compiler.cfg  extension_list.project_first.cfg  inner_data.gd  network_image.gd  prebound_shader_material.tres  project.godot  runtime_shader.gdshader  vendor_child.gd  vendor_data.gd  vendor_data.tres  vendor_grandchild.gd  z_container_value.gd
test/attached_extension/project/export/: .gdignore
test/attached_extension/provider_release/: CMakeLists.txt
test/compatibility/: godot_parser_4_7.json  official_projects.json
test/fixtures/: assert_release.gd
test/godot/: build_progress_model.gd  direct_build.gd  direct_build_4_7.gd  direct_export_build.gd  smoke.gd  toolchain_execution.gd
test/native_project/: editor_tool_smoke.gd  extension_list.cfg  smoke.gd  write_extension_registry.cmake
test/pck_audit_host/: project.godot
test/performance/: runtime_matrix.json
test/support/: test.hpp
tools/: audit_attached_export_pck.gd  audit_export_pck.gd  build_android_sdk.py  build_ios_sdk.py  build_web_sdk.py  check_architecture.py  check_workflow_topology.rb  download_with_retry.sh  extract_changelog.py  fetch_compatibility_corpus.py  generate_godot_api.py  generate_unicode_identifiers.py  inspect_export_pck.gd  package_complete_release.py  package_platform_release.py  package_release.py  run_compatibility_corpus.py  run_parser_corpus.py  run_runtime_matrix.py  run_web_browser_smoke.py  serve_web.py  stage_host_component.py  verify_export_immutability.py
(+19 files in other folders)
